math-core/tests/snapshots/conversion_test__text_with_weird_o.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\text{x\\o y}"
---
<math>
    <mtext>xøy</mtext>
</math>
