math-core/tests/snapshots/conversion_test__textbf.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\textbf{x}"
---
<math>
    <mtext>𝐱</mtext>
</math>
