math-core/tests/snapshots/conversion_test__textbf_with_digit_decimal.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\textbf{1234.5}"
---
<math>
    <mtext>𝟏𝟐𝟑𝟒.𝟓</mtext>
</math>
