math-core/tests/snapshots/conversion_test__textit.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\textit{x}"
---
<math>
    <mtext>𝑥</mtext>
</math>
