math-core/tests/snapshots/conversion_test__transform_group.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\mathit{a{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi>𝑏𝑐</mi>
        <mi>𝑑</mi>
    </mrow>
</math>
