math-core/tests/snapshots/conversion_test__underbrace.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\underbrace{a+b+c}_{d}"
---
<math>
    <munder>
        <munder>
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mi>c</mi>
            </mrow>
            <mo>⏟</mo>
        </munder>
        <mi>d</mi>
    </munder>
</math>
