math-core/tests/snapshots/conversion_test__underscore.snap
---
source: math-core/tests/conversion_test.rs
expression: "x\\ y"
---
<math>
    <mi>x</mi>
    <mtext> </mtext>
    <mi>y</mi>
</math>
